# nionswift-io

./: .travis.yml  CHANGES.rst  README.md  README.rst  meta.yaml  mypy.ini  pyproject.toml  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: python-package.yml
DM_IO/: __init__.py  dm3_image_utils.py  dm3parsertest.py  parse_dm3.py
TIFF_IO/: __init__.py  tifffile.py
nion/io/DM_IO/: DM5IOHandler.py  DM5Utils.py  dm3_image_utils.py
nion/io/DM_IO/test/: dm3parser_test.py
nion/io/DM_IO/test/resources/: ref_F_0_1.dm4  ref_F_0_2.dm3  ref_F_2_1.dm3  ref_F_2_1.dm4  ref_T_0_1.dm4
nionswift_plugin/DM_IO/: __init__.py  dm3_image_utils.py  dm3parsertest.py  parse_dm3.py
nionswift_plugin/DM_IO/test/: dm3parser_test.py  dm_io_test.py
nionswift_plugin/DM_IO/test/resources/: ref_F_0_1.dm3  ref_F_0_1.dm5  ref_F_0_2.dm4  ref_F_0_2.dm5  ref_F_1_1.dm3  ref_F_1_1.dm4  ref_F_1_1.dm5  ref_F_1_2.dm3  ref_F_1_2.dm4  ref_F_1_2.dm5  ref_F_2_1.dm5  ref_T_0_1.dm3  ref_T_0_1.dm5  ref_T_0_2.dm3  ref_T_0_2.dm4  ref_T_0_2.dm5
nionswift_plugin/TIFF_IO/: __init__.py  tifffile.py
nionswift_plugin/TIFF_IO/test/: TIFF_test.py
