[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nionswift-io"
version = "15.5.0"
authors = [
    { name = "Nion Software", email = "swift@nion.com" }
]
description = "NionSwift IO handlers."
readme = "README.rst"
requires-python = ">=3.12"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
urls = { "Homepage" = "https://github.com/nion-software/nionswift-io" }
dependencies = [
    "niondata >=15.8,<16.0",
    "nionutils >=4.13,<5.0",
    "numpy >=2.0,<3.0",
    "pytz",
    "tifffile"
]

[tool.setuptools.packages.find]
include = [
    "nionswift_plugin",
    "nionswift_plugin.DM_IO",
    "nionswift_plugin.DM_IO.test",
    "nionswift_plugin.TIFF_IO",
    "nionswift_plugin.TIFF_IO.test"
]

[tool.setuptools.package-data]
"nionswift_plugin.DM_IO.test" = ["resources/*"]

[tool.pytest.ini_options]
testpaths = [
    "nionswift_plugin/DM_IO",
    "nionswift_plugin/TIFF_IO"
]
