[metadata]
name = nionswift-io
version = 15.2.0
author = Nion Software
author_email = swift@nion.com
description = NionSwift IO handlers.
long_description = file: README.rst, CHANGES.rst
url = https://github.com/nion-software/nionswift-io
license = Apache-2.0
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find_namespace:
python_requires = >=3.9
install_requires =
    imageio
    niondata>=15.6,<16.0
    nionutils>=0.4.0,<0.5.0
    numpy>=1.25,<2.0
tests_require =
    h5py

[options.package_data]
nionswift_plugin.DM_IO.test = resources/*

[options.packages.find]
include =
    nionswift_plugin
    nionswift_plugin.DM_IO
    nionswift_plugin.DM_IO.test
    nionswift_plugin.TIFF_IO
    nionswift_plugin.TIFF_IO.test
