[metadata]
name = nionswift-io
version = 15.5.0
author = Nion Software
author_email = swift@nion.com
description = NionSwift IO handlers.
long_description = file: README.rst, CHANGES.rst
url = https://github.com/nion-software/nionswift-io
license = Apache-2.0
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find_namespace:
python_requires = >=3.11
install_requires =
    niondata >=15.8,<16.0
    nionutils >=4.13,<5.0
    numpy >=2.0,<3.0
    pytz
    tifffile
tests_require =
    h5py

[options.package_data]
nionswift_plugin.DM_IO.test = resources/*

[options.packages.find]
include =
    nionswift_plugin
    nionswift_plugin.DM_IO
    nionswift_plugin.DM_IO.test
    nionswift_plugin.TIFF_IO
    nionswift_plugin.TIFF_IO.test
